# office

./: Cargo.toml  Hello world.docx  README.md  test_write.docx  示例文档.docx
examples/: read_docx.rs  read_pptx.rs  write_docx.rs
src/: error.rs  lib.rs
src/common/: mod.rs  package.rs  relations.rs  xml_utils.rs
src/docprops/: app.rs  core.rs  mod.rs
src/docx/: README.md  document.rs  mod.rs  numbering.rs  properties.rs  styles.rs
src/docx/elements/: hyperlink.rs  mod.rs  paragraph.rs  run.rs  table.rs
tmp/hello_world/: [Content_Types].xml
tmp/hello_world/docProps/: app.xml  core.xml  custom.xml
tmp/hello_world/word/: document.xml  settings.xml  styles.xml
tmp/test_write/: [Content_Types].xml
tmp/test_write/_rels/: .rels
tmp/test_write/docProps/: app.xml  core.xml
tmp/test_write/word/: document.xml  numbering.xml  styles.xml
tmp/test_write/word/_rels/: document.xml.rels
