[package]
name = "office"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
zip = "6.0.0"
quick-xml = { version = "0.38.4", features = ["serialize", "serde-types"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"

# 可选依赖 (如果需要日期处理等)
chrono = { version = "0.4", optional = true }

[features]
default = ["docx", "xlsx", "pptx"]
docx = []
xlsx = []
pptx = []
full = ["docx", "xlsx", "pptx", "chrono"]
